test_programs/compile_failure/noirc_frontend_tests_disallows_test_attribute_on_impl_method/src/main.nr

        pub struct Foo { }

        impl Foo {
            #[named]
#[test]
            fn foo() { }
        }

        fn main() { }
    